--- a/themes/default.theme/index.html
+++ b/themes/default.theme/index.html
@@ -8,33 +8,11 @@
     <meta name="description" content="Menus for <%= location_id %>">
 
     <style>
-/* latin */
-@font-face {
-  font-family: 'Karla';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Karla'), local('Karla-Regular'), url(https://fonts.gstatic.com/s/karla/v13/qkBbXvYC6trAT7RVLtyU5rZP.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'Spectral';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local('Spectral Bold'), local('Spectral-Bold'), url(https://fonts.gstatic.com/s/spectral/v6/rnCs-xNNww_2s0amA9uCt23BafaPWnII.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-    </style>
-
-    <style>
-
-<%= SassC::Engine.new(File.read('themes/default.theme/reset.scss')).render %>
-<%= SassC::Engine.new(File.read('themes/default.theme/styles.scss')).render %>
-
+<%= SassC::Engine.new(File.read('themes/default.theme/fonts.scss'), style: :compressed).render %>
+<%= SassC::Engine.new(File.read('themes/default.theme/reset.scss'), style: :compressed).render %>
+<%= SassC::Engine.new(File.read('themes/default.theme/styles.scss'), style: :compressed).render %>
 <% if args[:'accessible'] %>
-<%= SassC::Engine.new(File.read('themes/default.theme/branded-dark-mode.scss')).render %>
+<%= SassC::Engine.new(File.read('themes/default.theme/branded-dark-mode.scss'), style: :compressed).render %>
 <% end %>
 
     </style>
@@ -74,39 +52,35 @@
           <div class="description"><%= menu.description %></div>
           
           <ul class="sections">
-          <% for section in menu.sections %>
+          <% for section in menu.sections -%>
             <li class="section" id="section-<%= section.id %>">
-              <div class="name"><%= section.name %></div>
-              <% if section.description %>
+              <% unless section.name.nil? || section.name.strip.empty? %><div class="name"><%= section.name %></div><% end %>
+              <% unless section.description.nil? || section.description.strip.empty? %>
                 <div class="description"><%= section.description %></div>
               <% end %>
     
               <ul class="items">
-              <% for item in section.items %>
+              <% for item in section.items -%>
                 <li class="item<%= ' multiple-prices' if item.choices.count > 1 %>" id="item-<%= item.id %>">
                   <div class="about">
-                    <div class="name"><%= item.name %></div>
-                    <% if item.description %>
+                    <% unless item.name.nil? || item.name.strip.empty? %><div class="name"><%= item.name %></div><% end %>
+                    <% unless item.description.nil? || item.description.strip.empty? %>
                       <div class="description"><%= item.description %></div>
                     <% end %>
                   </div>
   
-                  <% if item.choices.count > 0 %>
+                  <% if item.choices.count > 0 -%>
                   <ul class="choices">
-                    <% for choice in item.choices %>
+                    <% for choice in item.choices -%>
                       <li class="choice">
-                        <% if choice.name %>
-                          <div class="name">
-                            <%= choice.name %>
-                          </div>
+                        <% unless choice.name.nil? || choice.name.strip.empty? -%>
+                          <div class="name"><%= choice.name %></div>
                         <% end %>
-                        <div class="price">
-                          <% if args[:'high-prices'] %> 
-                            <%= choice.prices['min'] * 2 %>
-                          <% else %>
-                            <%= choice.prices['min'] %>
-                          <% end %>
-                        </div>
+                        <div class="price"><%- if(args[:'high-prices']) -%> 
+<%= choice.prices['min'] * 2 -%>
+                          <%- else -%>
+<%= choice.prices['min'] -%>
+                        <%- end -%></div>
                       </li>
                     <% end %>
                   </ul>
