Added some styles to facilitate embedding.

--- a/themes/standard.theme/image.html
+++ b/themes/standard.theme/image.html
@@ -4,7 +4,7 @@
   <div id="menu-item-image-panel"></div>
 </div>
 
-<script>
+<script class="embed">
   document.getElementById('menu-item-image').onclick = function() {
     var image = document.getElementById('menu-item-image')
     image.classList.remove('visible')
