Styling tweaks for menus with categories.

--- a/themes/standard.theme/index.html
+++ b/themes/standard.theme/index.html
@@ -56,7 +56,7 @@
         </nav>
         <% end %>
 
-        <nav class="menu-nav">
+        <nav id="menu-nav" class="menu-nav">
           <ul class="menus">
           <% for menu in data.menus %>
             <li data-category="<%= menu[:category] %>"
