Lots of changes for the launch of the Hakkasan Mayfair and Hanway Place menus with the Hakkasan theme.

--- a/themes/standard.theme/cookie-notice.html
+++ b/themes/standard.theme/cookie-notice.html
@@ -1,8 +1,10 @@
 <div id="cookie-notice" class="visible">
-  We use cookies to improve your experience on our site and to show you relevant advertising.
-  <a id="cookie-notice-button" href="javascript:void(0);" title="Main Menu" class="toggle">
-      okay
-    </a>
+  <div class="copy">
+    We use cookies to improve your experience on our site and to show you relevant advertising.
+  </div>
+  <div class="button">
+    <a id="cookie-notice-button" href="javascript:void(0);" title="Main Menu" class="toggle">okay</a>
+  </div>
 </div>
 
 <script>
