Header spacing that works for single-category or multi-category locations.
I originally got it working with one category.  Then added support for multiple categories.  That broke the layouts for single-category menus, for the navigation headers.  Then I fixed that for single-category menus.  But of course that broke multi-category menus again.  (argh!)  I finally sorted it out for good for both single-category and multi-category locations.  The real story here is that I need to test better before I commit updates.  That happened becuase I’m been under under constant, urgent busness pressure to launch new locations.

--- a/themes/standard.theme/index.html
+++ b/themes/standard.theme/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
 
-    <div class="menu-driver" id="menu-driver">
+    <div class="menu-driver<% if data.named_categories.size > 0 %> has-categories<% end %>" id="menu-driver">
 
       <% if args[:'vertical_grid'] %>
       <div class="baseline-grid">
@@ -90,7 +90,7 @@
               <polygon points="-1,0 0.4999978793,0.8660266282 0.4999978793,-0.8660266282" />
             </svg>
           </a>
-          <ul class="menus <% if data.named_categories.size > 0 %>has-categories<% end %>" onscroll="orientScrollThumbs('menu-nav')">
+          <ul class="menus" onscroll="orientScrollThumbs('menu-nav')">
           <% grouped_menus = data.menus.group_by(&:category); currentHasBeenSet = false %>
           <% grouped_menus.keys.each do |category| %>
             <% if data.named_categories.size > 1 %>
