Oops, missed a correction after copying and pasting.

--- a/themes/standard.theme/index.html
+++ b/themes/standard.theme/index.html
@@ -9,7 +9,7 @@
 
     <% unless data.location_description.empty? -%>
       <meta name="description" content="<%= data.location_description %> Menus">
-      <meta property="og:description" content="Offering tour packages for individuals or groups.">
+      <meta property="og:description" content="<%= data.location_description %>">
     <%- end %>
 
     <% unless data.main_image.nil? %>
