Make standard theme logos clickable
MENUS-45

--- a/themes/standard.theme/header.html
+++ b/themes/standard.theme/header.html
@@ -4,7 +4,7 @@
       <span></span><span></span><span></span>
     </a>
   </div>
-  <div class="location"><%= data.location_name %></div>
+  <div class="location"><a href="<%= data.location_website %>" class="location"><%= data.location_name %></a></div>
 </header>
 
 <script>
