--- a/themes/standard.theme/index.html
+++ b/themes/standard.theme/index.html
@@ -2,30 +2,6 @@
 <html lang="en">
   <head>
 
-    <svg style="display: none;">
-    <defs>
-      <g id="leaf1">
-        <path d="M43.1,0C43.1,0,0,73.4,0,106.7c0,26.3,21.2,40,36.4,43.3l7.4-101.3l7.3,101c15.1-3.8,35-17.5,35-42.9C86.2,73.4,43.1,0,43.1,0z"/>
-      </g>
-      <g id="twoleaf1">
-        <path d="M142.4,0c0,0-70,54-82.9,86.1c-1,2.4-1.7,4.9-2.3,7.4C35.6,81.8,0,72.5,0,72.5s14,53.9,29.4,69.3c12.1,12.1,28.3,8.7,36.9,3.2L22.9,94.7l48.1,41.5c2.1,2.1,4.4,4,6.9,5.7l46.4-94.7L92.1,147.3c16,2.2,40.5-3.3,50.4-27.8C155.4,87.4,142.4,0,142.4,0z"/>
-      </g>
-      <g id="fern1">
-        <path d="M46.2,0c0,0-16.6,28.3-16.6,41.1c0,11.7,10.9,17,16.6,17s16.6-5.3,16.6-17C62.8,28.3,46.2,0,46.2,0z"/>
-        <path d="M0,42.9c0,0,8.3,31.8,17.3,40.8C25.6,92,37.1,88,41.1,84s8-15.5-0.3-23.8C31.8,51.1,0,42.9,0,42.9z"/>
-        <path d="M91.6,43c0,0-31.8,8.3-40.8,17.3c-8.3,8.3-4.3,19.7-0.3,23.7s15.5,8,23.8-0.3C83.3,74.8,91.6,43,91.6,43z"/>
-        <path d="M0,81c0,0,8.3,31.8,17.3,40.8c8.3,8.3,19.8,4.3,23.8,0.3s8-15.5-0.3-23.7C31.8,89.3,0,81,0,81z"/>
-        <path d="M91.6,81.2c0,0-31.8,8.3-40.8,17.3c-8.3,8.3-4.3,19.7-0.3,23.8s15.5,8,23.8-0.3C83.3,112.9,91.6,81.2,91.6,81.2z"/>
-        <path d="M0,119.2c0,0,8.3,31.8,17.3,40.8c8.3,8.3,19.8,4.3,23.8,0.3s8-15.5-0.3-23.7C31.8,127.5,0,119.2,0,119.2z"/>
-        <path d="M91.6,119.3c0,0-31.8,8.3-40.8,17.3c-8.3,8.3-4.3,19.8-0.3,23.8s15.5,8,23.7-0.3C83.3,151.1,91.6,119.3,91.6,119.3z"/>
-      </g>
-      <g id="hk1">
-        <polygon points="72.4,150 87.4,150 87.4,105.8 103.1,91.3 141.4,150 160.1,150 113.4,81.6 153.1,45 132.8,45 87.4,88.8 87.4,0 72.4,0 72.4,88.8 27.1,45 6.9,45 46.7,81.6 0,150 18.5,150 57,91.3 72.4,105.8 		"/>
-      </g>
-    </defs>
-    </svg>
-
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -63,6 +39,8 @@
     <%= ERB.new(Theme.new(args[:theme]).file('head.html'), nil, nil, 'head').result(binding) %>
   </head>
   <body>
+
+    <%= ERB.new(Theme.new(args[:theme]).file('codes.svg'), nil, nil, 'header').result(binding) %>
 
     <div class="menu-driver<% if data.named_categories.size > 0 %> has-categories<% end %>" id="menu-driver">
 
